Lab18_amazon_eks/manifests/apache_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apache-pod
  labels:
    app: apache-pod
spec:
  containers:
    - name: apache-container
      image: httpd:2.4
      ports:
        - containerPort: 80
