Lab18_amazon_eks/manifests/hello_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-hello
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.25
          ports:
            - containerPort: 80
