Lab18_amazon_eks/manifests/my_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-deploy
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: my-deploy
    spec:
      containers:
        - name: nginx-container
          image: nginx:1.19
          ports:
            - containerPort: 80
