Lab18_amazon_eks/manifests/pod_multi.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-pod
  labels:
    app: multi-pod
spec:
  containers:
    - name: nginx-container
      image: nginx:1.25
      ports:
        - containerPort: 80
    - name: curl-container
      image: curlimages/curl:8.10.1
      command: ["sh", "-c", "sleep 3600"]
