Lab18_amazon_eks/manifests/hello_cip_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app: hello-app
  ports:
    - name: http
      port: 80
      targetPort: 80
