Lab18_amazon_eks/manifests/hello_lb_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  type: LoadBalancer
  selector:
    app: hello-app
  ports:
    - name: tcp
      port: 8020
      targetPort: 80
