Lab18_amazon_eks/manifests/my_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ingress-svc
spec:
  type: NodePort
  selector:
    app: hello-app
  ports:
    - name: http
      port: 80
      targetPort: 80
