Lab18_amazon_eks/manifests/my_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: my-ingress-svc
                port:
                  number: 80
          - path: /world
            pathType: Prefix
            backend:
              service:
                name: my-ingress-svc
                port:
                  number: 80
